--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-router-dom": "^6.14.0",
     "react-test-renderer": "^18.2.0",
     "redux": "^4.2.1",
-    "sass": "^1.63.6",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@babel/core": "^7.22.6",
